--- a/GettingStarted-Ink/MainPage.xaml
+++ b/GettingStarted-Ink/MainPage.xaml
@@ -84,7 +84,7 @@ THE SOFTWARE.
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <!-- Begin "Step 5: Support handwriting recognition" -->
-            <!--<Button x:Name="recognizeText" 
+            <Button x:Name="recognizeText" 
                     Content="Recognize text"  
                     Grid.Row="0" Grid.Column="0"
                     Margin="10,10,10,10"
@@ -93,7 +93,7 @@ THE SOFTWARE.
                        Text="Recognition results: "
                        VerticalAlignment="Center" 
                        Grid.Row="0" Grid.Column="1"
-                       Margin="50,0,0,0" />-->
+                       Margin="50,0,0,0" />
             <!-- End "Step 5: Support handwriting recognition" -->
             <!-- Begin "Step 6: Recognize shapes" -->
             <!--<Button Grid.Row="1" x:Name="recognizeShape" Click="recognizeShape_ClickAsync"
